Fixed overflow on mobiles

--- a/src/routes/work/game/ColorGuess/ColorGuessView/ColorGuessView.module.css
+++ b/src/routes/work/game/ColorGuess/ColorGuessView/ColorGuessView.module.css
@@ -3,9 +3,9 @@
     left: 0;
     top: 0;
     margin: 0;
-    padding: 0;
+    padding: 3rem 0 0 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
